--- a/package.json
+++ b/package.json
@@ -3,25 +3,55 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "serve:dev": "cross-env NODE_ENV=development dotenv -e .env.dev.serve vue-cli-service serve",
+    "build:dev": "cross-env NODE_ENV=production  dotenv -e .env.dev.build vue-cli-service build",
+    "serve:test": "cross-env NODE_ENV=development dotenv -e .env.test.serve vue-cli-service serve",
+    "build:test": "cross-env NODE_ENV=production  dotenv -e .env.test.build vue-cli-service build",
+    "serve:prod": "cross-env NODE_ENV=development dotenv -e .env.prod.serve vue-cli-service serve",
+    "build:prod": "cross-env NODE_ENV=production  dotenv -e .env.prod.build vue-cli-service build",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-jest": "^26.6.3",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.32",
+    "jest": "^26.6.3",
+    "js-cookie": "^2.2.1",
+    "package": "^1.0.1",
+    "path-to-regexp": "^6.2.0",
+    "screenfull": "^5.0.2",
     "vue": "^3.0.0",
+    "vue-class-component": "^8.0.0-0",
+    "vue-i18n": "^9.0.0-rc.7",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "babel-plugin-component": "^1.1.1",
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^4.0.0",
+    "less": "^4.0.0",
+    "less-loader": "^7.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3"
+    "style-loader": "^2.0.0",
+    "style-resources-loader": "^1.4.1",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "~3.9.3",
+    "vue-cli-plugin-i18n": "~1.0.1",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
+    "vue-jest": "^5.0.0-0",
+    "webpackbar": "^5.0.0-3"
   }
 }
