--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/echarts": "^4.9.3",
     "@types/file-saver": "^2.0.1",
     "@types/lodash": "^4.14.167",
     "@types/sortablejs": "^1.10.6",
@@ -23,6 +24,7 @@
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
     "crypto-ts": "^1.0.2",
+    "echarts": "^5.0.0",
     "element-plus": "^1.0.2-beta.32",
     "file-saver": "^2.0.5",
     "jest": "^26.6.3",
@@ -40,6 +42,7 @@
     "vue-i18n": "^9.0.0-rc.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.0-0",
+    "vue3-count-to": "^1.0.7",
     "vuex": "^4.0.0-0",
     "vuex-persistedstate": "^4.0.0-beta.1",
     "xlsx": "^0.16.9"
